# RAVEN

./: .gitignore  CLAUDE.md  launch_raven.bat  pyproject.toml  reqgraph_demo.py  requirement_graph.py  requirements.txt  sample_reqs.csv
docs/: RAVEN_CTO_deck.html
models/req_tagger/: config.json
reqgraph/: README.md  __init__.py  __main__.py  core.py  corpus.py  errors.py  extractors.py  gui.py  io_formats.py  nlp.py  parser.py  quality.py  seed_data.py  sysml_compare.py  sysml_parser.py  sysml_v1_compare.py  sysml_v1_parser.py  templates.py  tiling.py  traceability.py
reqgraph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reqgraph/docs/: ARCHITECTURE.md  MANUAL.md
reqgraph/static/: index.html  roadmap.html
samples/drone/: drone_model.sysml  drone_model_kg.ttl  drone_requirements.reqif
tests/: test_reqgraph.py  test_sysml_compare.py  test_sysml_v1_compare.py  test_traceability.py
