[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reqgraph"
version = "1.0.0"
description = "IREB-CPRE aligned Requirement <-> Graph toolkit with lossless round-trip"
readme = "reqgraph/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sudesh" }]
keywords = ["requirements-engineering", "IREB", "EARS", "knowledge-graph", "NLP"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# the core (rules backend, graph, exporters) is dependency-free on purpose
dependencies = []

[project.optional-dependencies]
nlp = ["spacy>=3.5"]
ml = ["torch>=2.0", "transformers>=4.30", "numpy"]
io = ["pandas>=2.0", "openpyxl", "lxml"]
graph = ["networkx"]
all = ["spacy>=3.5", "torch>=2.0", "transformers>=4.30", "numpy",
       "pandas>=2.0", "openpyxl", "lxml", "networkx"]
dev = ["pytest"]

[project.scripts]
reqgraph = "reqgraph.__main__:main"

[tool.setuptools]
packages = ["reqgraph"]

[tool.setuptools.package-data]
reqgraph = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
